style(frontend): Fix double vertical scrollbar on Landing Page by using overflow-clip

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-slate-900 text-slate-300 antialiased;
+    @apply bg-slate-900 text-slate-300 antialiased overflow-x-hidden;
   }
 }
 
